// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportsTable /> should display spinner when report is not ready 1`] = `
<div>
  <table
    class="table table-hover"
    data-testid="reports-table"
  >
    <tbody>
      <tr>
        <th
          scope="col"
        >
          ID
        </th>
        <th
          aria-label="Actions"
          scope="col"
        />
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          1234
        </td>
        <td
          class="text-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ReportsTable /> should handle lack of reports 1`] = `
<div>
  <p
    class="text-muted text-center"
  >
    There are no reports available.
  </p>
</div>
`;

exports[`<ReportsTable /> should render reports 1`] = `
<div>
  <table
    class="table table-hover"
    data-testid="reports-table"
  >
    <tbody>
      <tr>
        <th
          scope="col"
        >
          ID
        </th>
        <th
          aria-label="Actions"
          scope="col"
        />
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          1234
        </td>
        <td
          class="text-center"
        >
          <div
            class="btn-group"
            role="group"
          >
            <a
              class="btn btn-primary"
              download=""
              href="/reforis/diagnostics/api/reports/1234/contents"
            >
              Download
            </a>
            <button
              class="btn btn-danger btn-sm"
              type="button"
            >
               
               
              Delete
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
